changed date to October

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ td.sess-row i {font-size: 0.8em; font-family: sans-serif}
   <h2 id="gwc-full-name">2019 Pacific Neighborhood Consortium <br> Annual Conference and Joint Meetings</h2>
   
   <div id="date-venue">
-    <p id="date-venue-date">November, 2019</p>
+    <p id="date-venue-date">October, 2019</p>
     <p id="date-venue-venue">Nanyang Technological University (NTU), Singapore</p>
   </div>
 
@@ -159,7 +159,7 @@ td.sess-row i {font-size: 0.8em; font-family: sans-serif}
   <h3 id="conference-info">Conference Information <a class="top-link" href="#top">[&uarr; Top]</a></h3>
   
   <h4>Date</h4>
-  <p>November 2019</p>
+  <p>October 2019  (to be confirmed)</p>
   <!-- <p>The main conference will run from Monday through Friday <\!--at least Thursday, and possibly spill over into Friday-\-> &#8212; we are now -->
   <!-- finalizing <a href="#schedule_overview">the timetable</a>.</p> -->
 
