--- a/index.html
+++ b/index.html
@@ -316,7 +316,11 @@ or nearby <a href='http://www.ntu.edu.sg/has/FnB/Pages/HallCanteens.aspx'>Food C
 
 <h2 id="contact">Contact  <a class="top-link" href="#top">[&uarr; Top]</a></h2>
 <table border="0" cellpadding="5">
-  
+   <tr>
+    <td><strong>General Enquiries</strong></td>
+    <td>&#8211;</td>
+    <td><a href="PNC2019@ntu.edu.sg">PNC2019@ntu.edu.sg</a></td>
+  </tr>
   <tr>
     <td>Francis <b>Bond</b></td>
     <td>&#8211;</td>
