--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0047)http://compling.hss.ntu.edu.sg/events/2018-gwc/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    
-   <title>GWC 2018 Singapore</title>
+   <title>PNC 2019</title>
 <style type="text/css">
 body {margin: 0; padding: 0; font-size: 16px}
 
@@ -300,7 +300,7 @@ or nearby <a href='http://www.ntu.edu.sg/has/FnB/Pages/HallCanteens.aspx'>Food C
 
 <h3>Thanks</h3>
 
-<p>The conference and workshop are partially supported  by SUTD.
+<p>The conference and workshop are partially supported by SUTD.
   
 <!-- the NTU <a href='http://class.cohass.ntu.edu.sg/Pages/Home.aspx'>Centre -->
 <!-- for Liberal Arts and Social Sciences (CLASS)</a> and SUTD. -->
