Added date and theme after SC meeting

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ nav ul li a:hover { background-color: rgba(250, 100, 100, 1)}
 
 header h1 {margin-top: 0px; font-family: serif; font-size: 4em; color: green}
 header h2 {font-size: 2.5em}
+header h3 {font-size: 2em}
 #gwc-full-name {margin-top: -30px}
 #date-venue {font-weight: bold; font-size: 1.8em}
 #date-venue-venue {font-size: 0.9em; margin-top: -10px}
@@ -68,11 +69,15 @@ td.sess-row i {font-size: 0.8em; font-family: sans-serif}
   <center>
 
   <h1 id="gwc-name">PNC 2019</h1>
-  <h2 id="gwc-full-name">2019 Pacific Neighborhood Consortium <br> Annual Conference and Joint Meetings</h2>
+  <h2 id="gwc-full-name">2019 Pacific Neighborhood Consortium
+    <br>Annual Conference and Joint Meetings</h2>
+  <h3><i>Regionality and Digital Humanities: South-South
+  Connections</i>  </h3>
   
   <div id="date-venue">
-    <p id="date-venue-date">October, 2019</p>
-    <p id="date-venue-venue">Nanyang Technological University (NTU), Singapore</p>
+    <p id="date-venue-date">1–4 October, 2019</p>
+    <p id="date-venue-venue">Nanyang Technological University (NTU),
+      Singapore</p>
   </div>
 
   <img src="./sing_small.jpg">
@@ -91,7 +96,11 @@ td.sess-row i {font-size: 0.8em; font-family: sans-serif}
   education in the Pacific Rim through computing and communications
   technology. PNC explores issues of information and technology
   exchange, interdisciplinary collaboration, and the development of
-  the cultural knowledge contents. In fostering access to digitized
+  the cultural knowledge contents.  The theme for 2019
+  is <i>Regionality and Digital Humanities: South-South
+  Connections</i>.
+
+  <p>In fostering access to digitized
   data on the Pacific Rim, the PNC serves as a portal for access to
   digital research. It helps scholars to find the library, archive,
   and museum materials needed to support both teaching and
@@ -159,8 +168,9 @@ td.sess-row i {font-size: 0.8em; font-family: sans-serif}
   <h3 id="conference-info">Conference Information <a class="top-link" href="#top">[&uarr; Top]</a></h3>
   
   <h4>Date</h4>
-  <p>October 2019  (to be confirmed)</p>
-  <!-- <p>The main conference will run from Monday through Friday <\!--at least Thursday, and possibly spill over into Friday-\-> &#8212; we are now -->
+  <p>October 1–4 2019</p>
+  <p>The main conference will run from Tuesday through Thursday, with
+  colocated workshops on Friday
   <!-- finalizing <a href="#schedule_overview">the timetable</a>.</p> -->
 
   <h4>Venue</h4>
@@ -175,10 +185,6 @@ there is <a href='http://www.ntu.edu.sg/has/FnB/Pages/AroundCampus.aspx'>COSMO</
 or nearby <a href='http://www.ntu.edu.sg/has/FnB/Pages/HallCanteens.aspx'>Food Courts 1, 2 or 9 (good noodles)</a>.
 
   </p>
-  
-  <h4>Sub-events</h4>
-  <p>Apart from the main conference, there may also be a number of sub-events.
-
   
   <h3 id="local-info">Local Information <a class="top-link" href="#top">[&uarr; Top]</a></h3>
   
@@ -229,10 +235,9 @@ or nearby <a href='http://www.ntu.edu.sg/has/FnB/Pages/HallCanteens.aspx'>Food C
 
 <h3 id="dates">Important dates <a class="top-link" href="#top">[&uarr; Top]</a></h3>
 
-<p> To be announced.
   
-<!-- <table> -->
-<!-- <tbody><tr> -->
+<table>
+<tbody><tr> 
 <!-- <td><a href="https://www.aclweb.org/portal/content/global-wordnet-conference-2018/"><s>First Call for Papers</s></a></td> -->
 <!-- <td><a href="https://www.aclweb.org/portal/content/global-wordnet-conference-2018/">September 20, 2017</a></td> -->
 <!-- </tr> -->
@@ -253,16 +258,16 @@ or nearby <a href='http://www.ntu.edu.sg/has/FnB/Pages/HallCanteens.aspx'>Food C
 <!-- <td>November 25, 2017</td><td>for author(s) of papers to be included in the proceedings</td> -->
 <!-- </tr> -->
 <!-- <tr> -->
-<!-- <td><b>Conference</b></td> -->
-<!-- <td><font color="#000000">January 8–12, 2018</font></td> -->
-<!-- <td> <\!-- <a href="program.html">Conference Program</a> --\-> </td> -->
-<!-- </tr> -->
+<td><b>Conference</b></td>
+<td><font color="#000000">October 1–4, 2019</font></td>
+<!-- <td> <\\!-- <a href="program.html">Conference Program</a> --\\-> </td> -\-> -->
+</tr>
 <!-- <tr> -->
 <!-- <td><b>Revised final version due</b></td> -->
 <!-- <td>February 12, 2018</td><td></td> -->
 <!-- </tr> -->
 <!-- <tr> -->
-<!-- </tbody></table> -->
+</tbody></table>
 
 <h3>More <a class="top-link" href="#top">[&uarr; Top]</a></h3>
 <p>More about the  <a href="http://pnclink.org/">Pacific Neighborhood Consortium in general</a>.
