added hosts and co-hosts with PNC and ECAI

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ td.sess-row i {font-size: 0.8em; font-family: sans-serif}
       Singapore</p>
   </div>
 
-  <img src="./sing_small.jpg">
+  <img src="images/sing_small.jpg">
 
   </center>
 </header>
@@ -299,6 +299,7 @@ or nearby <a href='http://www.ntu.edu.sg/has/FnB/Pages/HallCanteens.aspx'>Food C
     </ul>
 </ul>
 
+
 <h3>Programme Committee</h3>
 
 <p>To be announced.
@@ -306,6 +307,23 @@ or nearby <a href='http://www.ntu.edu.sg/has/FnB/Pages/HallCanteens.aspx'>Food C
 <h3>Thanks</h3>
 
 <p>The conference and workshop are partially supported by SUTD.
+
+
+  <h3>Hosts and Co-hosts</h3>
+
+  <table>
+    <tr>
+      <td><a href='http://www.pnclink.org/' title="PNC - Pacific Neighborhood Consortium">
+	  <img src="images/PNC.png" width="118" height="84"
+	       alt="PNC - Pacific Neighborhood Consortium"/>
+      </a></td>
+      <td><a href='http://ecai.org/' title="ECAI - Electronic Cultural Atlas Initiative">
+	  <img src="images/ECAI.png" width="84" height="84"
+	       alt="ECAI - Electronic Cultural Atlas Initiative"/>
+      </a></td>
+
+    </tr>
+  </table>
   
 <!-- the NTU <a href='http://class.cohass.ntu.edu.sg/Pages/Home.aspx'>Centre -->
 <!-- for Liberal Arts and Social Sciences (CLASS)</a> and SUTD. -->
